force-app/main/default/objects/WeatherInfo__c/WeatherInfo__c.object-meta.xml
<CustomObject>
    <description>Detail object to store the location&apos;s weather parameters (like temperature, humidity)</description>
    <label>WeatherInfo</label>
    <nameField>
        <label>WeatherInfo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Weather Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>