force-app/main/default/objects/WeatherInfo__c/fields/Current_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Current_Temperature__c</fullName>
    <description>Custom field to store the current temperature for a location</description>
    <label>Current Temperature</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>