force-app/main/default/objects/WeatherInfo__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Contains weather condition data like cloudy, sunny, stormy, rainy</description>
    <label>Description</label>
    <length>20</length>
    <type>Text</type>
</CustomField>