force-app/main/default/objects/WeatherInfo__c/fields/Feels_Like__c.field-meta.xml
<CustomField>
    <fullName>Feels_Like__c</fullName>
    <description>Custom field to record feels like temperature data</description>
    <inlineHelpText>(In Degrees)</inlineHelpText>
    <label>Feels Like</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>