force-app/main/default/objects/WeatherInfo__c/fields/Weather_Location__c.field-meta.xml
<CustomField>
    <fullName>Weather_Location__c</fullName>
    <label>Weather Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Weather Info</relationshipLabel>
    <relationshipName>Weather_Info</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>